fix(settings): make the fields panel scrollable when overflow

--- a/src/renderer/style/settings.scss
+++ b/src/renderer/style/settings.scss
@@ -82,6 +82,7 @@ $engineColWidth: 8rem;
         border: thin solid;
         border-radius: 5px;
         padding: calc(.5 * var(--pad));
+        overflow: auto;
     }
 }
 
